Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: "Hey! I'm Martin, your new virtual butler. I'm here to make your life easier."
 ---
 
 <img
@@ -16,22 +16,22 @@ description: 'Welcome to the home of your new documentation'
 
 ## Setting up
 
-The first step to world-class documentation is setting up your editing environments.
+To start using Martin, you'll need to get an access code and download our iOS app.
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
+    title="Create an Account"
     icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
+    href="https://trymartin.com"
   >
-    Get your docs set up locally for easy development
+    Sign up for a free trial on our website to receive an access code.
   </Card>
   <Card
-    title="Preview Changes"
+    title="Download the App"
     icon="image"
-    href="https://mintlify.com/docs/development"
+    href="https://apps.apple.com/us/app/martin/id6453473083"
   >
-    Preview your changes before you push to make sure they're perfect
+    Martin's integrations and settings are all managed in the iOS app.
   </Card>
 </CardGroup>
 
