Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -21,14 +21,14 @@ To start using Martin, you'll need to get an access code and download our iOS ap
 <CardGroup cols={2}>
   <Card
     title="Create an Account"
-    icon="pen-to-square"
+    icon="user"
     href="https://trymartin.com"
   >
     Sign up for a free trial on our website to receive an access code.
   </Card>
   <Card
     title="Download the App"
-    icon="image"
+    icon="app-store-ios"
     href="https://apps.apple.com/us/app/martin/id6453473083"
   >
     Martin's integrations and settings are all managed in the iOS app.
