Ready for v1 push

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,28 +1,28 @@
 ---
 title: Introduction
-description: "Hey! I'm Martin, your new virtual butler. I'm here to make your life easier."
+description: Bring on Martin as your new assistant
 ---
 
 <img
   className="block dark:hidden"
-  src="/images/hero-light.svg"
+  src="/images/iphone-hero.png"
   alt="Hero Light"
 />
 <img
   className="hidden dark:block"
-  src="/images/hero-dark.svg"
+  src="/images/iphone-hero.png"
   alt="Hero Dark"
 />
 
-## Setting up
+## Create an account
 
-To start using Martin, you'll need to get an access code and download our iOS app.
+To start using Martin, get an access code and download the Martin iOS app.
 
 <CardGroup cols={2}>
   <Card
-    title="Create an Account"
-    icon="user"
-    href="https://trymartin.com"
+    title="Get an Access Code"
+    icon="key"
+    href="https://trymartin.com/pricing"
   >
     Sign up for a free trial on our website to receive an access code.
   </Card>
@@ -35,37 +35,73 @@ To start using Martin, you'll need to get an access code and download our iOS ap
   </Card>
 </CardGroup>
 
-## Make it yours
+## Give Martin your contact info
 
-Update your docs to your brand and add valuable content for the best user conversion.
+Unlike other AI assistants, Martin is reachable through all your communication channels, including phone, SMS, WhatsApp, email, and Slack.
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    title="Phone"
+    icon="phone"
+    href="https://trymartin.com/docs/interfaces/phone"
   >
-    Customize your docs to your company's colors and brands
+    Give Martin your number so you can reach him through a phone call, SMS, or WhatsApp message.
+  </Card>
+
+  <Card
+    title="Email"
+    icon="envelope"
+    href="https://trymartin.com/docs/interfaces/email"
+  >
+    Give Martin your email so you can send or forward him emails with commands or questions.
+  </Card>
+</CardGroup>
+
+## Integrate Martin
+
+Connect Martin to all your tools and services, so he can use them on your behalf.
+
+<CardGroup cols={2}>
+  <Card
+    title="Calendar"
+    icon="calendar"
+    href="https://trymartin.com/docs/capabilities/calendar"
+  >
+    Martin can manage your calendar and schedule events for you.
   </Card>
   <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    title="Inbox"
+    icon="inbox"
+    href="https://trymartin.com/docs/capabilities/inbox"
   >
-    Automatically generate endpoints from an OpenAPI spec
+    Martin can check your emails and draft replies on your behalf.
   </Card>
   <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
+    title="Contacts"
+    icon="address-book"
+    href="https://trymartin.com/docs/capabilities/contacts"
   >
-    Build interactive features and designs to guide your users
+    Martin can text and call your contacts and carry out full conversations.
   </Card>
   <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
+    title="Slack"
+    icon="slack"
+    href="https://trymartin.com/docs/capabilities/slack"
   >
-    Check out our showcase of our favorite documentation
+    Martin can read, send, and reply to messages on your behalf in Slack.
+  </Card>
+  <Card
+    title="To-dos & Reminders"
+    icon="bell"
+    href="https://trymartin.com/docs/capabilities/todo"
+  >
+    Martin can track your to-dos and send you reminders via text or email.
+  </Card>
+  <Card
+    title="Information"
+    icon="magnifying-glass"
+    href="https://trymartin.com/docs/capabilities/information"
+  >
+    Martin searches Google, Perplexity, Twitter, and various news/weather sites to brief you.
   </Card>
 </CardGroup>
