--- a/capabilities/files.mdx
+++ b/capabilities/files.mdx
@@ -1,6 +1,7 @@
 ---
-title: 'Introduction'
+title: 'Files'
 description: 'Example section for showcasing API endpoints'
+icon: 'file'
 ---
 
 <Note>
