Fix links on introduction page

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -43,7 +43,7 @@ Unlike other AI assistants, Martin is reachable through all your communication c
   <Card
     title="Phone"
     icon="phone"
-    href="https://trymartin.com/docs/interfaces/phone"
+    href="https://docs.trymartin.com/interfaces/phone"
   >
     Give Martin your number so you can reach him through a phone call, SMS, or WhatsApp message.
   </Card>
@@ -51,7 +51,7 @@ Unlike other AI assistants, Martin is reachable through all your communication c
   <Card
     title="Email"
     icon="envelope"
-    href="https://trymartin.com/docs/interfaces/email"
+    href="https://docs.trymartin.com/interfaces/email"
   >
     Give Martin your email so you can send or forward him emails with commands or questions.
   </Card>
@@ -65,42 +65,42 @@ Connect Martin to all your tools and services, so he can use them on your behalf
   <Card
     title="Calendar"
     icon="calendar"
-    href="https://trymartin.com/docs/capabilities/calendar"
+    href="https://docs.trymartin.com/capabilities/calendar"
   >
     Martin can manage your calendar and schedule events for you.
   </Card>
   <Card
     title="Inbox"
     icon="inbox"
-    href="https://trymartin.com/docs/capabilities/inbox"
+    href="https://docs.trymartin.com/capabilities/inbox"
   >
     Martin can check your emails and draft replies on your behalf.
   </Card>
   <Card
-    title="Contacts"
+    title="Texting & Calling"
     icon="address-book"
-    href="https://trymartin.com/docs/capabilities/contacts"
+    href="https://docs.trymartin.com/capabilities/contacts"
   >
     Martin can text and call your contacts and carry out full conversations.
   </Card>
   <Card
     title="Slack"
     icon="slack"
-    href="https://trymartin.com/docs/capabilities/slack"
+    href="https://docs.trymartin.com/capabilities/slack"
   >
     Martin can read, send, and reply to messages on your behalf in Slack.
   </Card>
   <Card
-    title="To-dos & Reminders"
+    title="Reminders & To-dos"
     icon="bell"
-    href="https://trymartin.com/docs/capabilities/todo"
+    href="https://docs.trymartin.com/capabilities/reminders"
   >
     Martin can track your to-dos and send you reminders via text or email.
   </Card>
   <Card
     title="Information"
     icon="magnifying-glass"
-    href="https://trymartin.com/docs/capabilities/information"
+    href="https://docs.trymartin.com/capabilities/search"
   >
     Martin searches Google, Perplexity, Twitter, and various news/weather sites to brief you.
   </Card>
