--- a/capabilities/calendar.mdx
+++ b/capabilities/calendar.mdx
@@ -4,6 +4,34 @@ description: 'Have Martin read, create, and update events in your calendar.'
 icon: 'calendar'
 ---
 
+<CardGroup>
+
+<Card>
+<iframe
+  width="100%"
+  height="100%"
+  src="https://youtu.be/q_MkZjHb4IM"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+  ></iframe>
+</Card>
+
+<Card>
+<iframe
+  width="100%"
+  height="100%"
+  src="https://www.youtube.com/watch?v=QI379BuWXOk"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+  ></iframe>
+</Card>
+</CardGroup>
+
+
 ## Integrations
 
 Martin syncs with your existing calendar accounts.
