Fix youtube links for 1st 2 demos

--- a/capabilities/calendar.mdx
+++ b/capabilities/calendar.mdx
@@ -4,33 +4,15 @@ description: 'Have Martin read, create, and update events in your calendar.'
 icon: 'calendar'
 ---
 
-<CardGroup>
-
-<Card>
 <iframe
   width="100%"
-  height="100%"
-  src="https://youtu.be/q_MkZjHb4IM"
+  height="400"
+  src="https://www.youtube.com/embed/q_MkZjHb4IM?si=4dttCq-60I52rXMR"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen
   ></iframe>
-</Card>
-
-<Card>
-<iframe
-  width="100%"
-  height="100%"
-  src="https://www.youtube.com/watch?v=QI379BuWXOk"
-  title="YouTube video player"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
-  ></iframe>
-</Card>
-</CardGroup>
-
 
 ## Integrations
 
