--- a/interfaces/sms.mdx
+++ b/interfaces/sms.mdx
@@ -4,12 +4,24 @@ description: 'Text Martin over SMS'
 icon: 'messages'
 ---
 
-<Tip>
-    To text Martin on a Mac, turn on Text Message Forwarding in your iPhone's Settings > Messages.
-</Tip>
+
+
+<iframe
+  width="100%"
+  height="400"
+  src="https://www.youtube.com/embed/QI379BuWXOk?si=v0HQr3K9XVFEXjwz"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+  ></iframe>
 
 ## Setup
 
 1. Tap the hammer icon in the app and select "SMS".
 2. Tap "Add your phone number" and enter your phone number.
 3. Verify your phone number by entering the code you receive via SMS.
+
+<Tip>
+    To text Martin on a Mac, turn on Text Message Forwarding in your iPhone's Settings > Messages.
+</Tip>
