--- a/interfaces/email.mdx
+++ b/interfaces/email.mdx
@@ -4,9 +4,15 @@ description: 'Send or forward emails to Martin'
 icon: 'envelope'
 ---
 
-<Tip>
-    Got an email with events coming up? Forward it to Martin, and he'll add them all to your calendar.
-</Tip>
+<iframe
+  width="100%"
+  height="400"
+  src="https://www.youtube.com/embed/P0MZp20gK3w?si=0sbkrXsyhuQUgsZQ"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+  ></iframe>
 
 ## Setup
 
@@ -14,3 +20,7 @@ icon: 'envelope'
 2. Tap "Add your email address" and enter your email address.
 3. Verify your email address by entering the code you receive via email.
 4. Add up to 5 email addresses for Martin to recognize.
+
+<Tip>
+    Got an email with events coming up? Forward it to Martin, and he'll add them all to your calendar.
+</Tip>
