--- a/interfaces/whatsapp.mdx
+++ b/interfaces/whatsapp.mdx
@@ -4,12 +4,22 @@ description: 'Text Martin over WhatsApp'
 icon: 'whatsapp'
 ---
 
-<Tip>
-    Martin responds to WhatsApp messages 20% faster than SMS.
-</Tip>
+<iframe
+  width="100%"
+  height="400"
+  src="https://www.youtube.com/embed/cPiiM37Zbk0?si=0BGiQtmHdoKYo94a"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+  ></iframe>
 
 ## Setup
 
 1. Tap the hammer icon in the app and select "WhatsApp".
 2. Tap "Add your phone number" and enter your phone number.
 3. Verify your phone number by entering the code you receive via WhatsApp.
+
+<Tip>
+    Martin responds to WhatsApp messages 20% faster than SMS.
+</Tip>
