--- a/interfaces/slack.mdx
+++ b/interfaces/slack.mdx
@@ -4,11 +4,21 @@ description: 'Type /Martin, @Martin, or DM Martin to reach Martin on Slack.'
 icon: 'slack'
 ---
 
-<Tip>
-    Separately, Martin can send and react to messages from your own Slack account on command.
-</Tip>
+<iframe
+  width="100%"
+  height="400"
+  src="https://www.youtube.com/embed/n7-YWy4xTfo?si=G6gw4LisaVKGOazo"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+  ></iframe>
 
 ## Setup
 
 1. Tap the hammer icon in the app and select "Slack".
 2. Tap "Add Slack Workspace" and sign in with your Slack account.
+
+<Tip>
+    Separately, Martin can send and react to messages from your own Slack account on command.
+</Tip>
