Documentation update for web launch

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,35 +3,23 @@ title: Introduction
 description: Bring on Martin as your new assistant
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/iphone-hero.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/iphone-hero.png"
-  alt="Hero Dark"
-/>
 
 ## Create an account
 
-To start using Martin, get an access code and download the Martin iOS app.
-
 <CardGroup cols={2}>
   <Card
-    title="Get an Access Code"
+    title="Sign in on the web"
     icon="key"
-    href="https://trymartin.com/pricing"
+    href="https://app.trymartin.com"
   >
-    Sign up for a free trial on our website to receive an access code.
+    Sign up at [app.trymartin.com](https://app.trymartin.com) and start using Martin on the web.
   </Card>
   <Card
     title="Download the App"
     icon="app-store-ios"
     href="https://apps.apple.com/us/app/martin/id6453473083"
   >
-    Martin's integrations and settings are all managed in the iOS app.
+    Use Martin on your phone with the iOS app.
   </Card>
 </CardGroup>
 
