Update hammer icon

--- a/capabilities/briefings.mdx
+++ b/capabilities/briefings.mdx
@@ -15,5 +15,5 @@ icon: 'newspaper'
 
 ## Setup
 
-1. Tap the hammer icon in the Martin app and select "Briefings".
+1. Tap the account icon in the Martin app and select "Briefings".
 2. Select the frequency, topics, and send time of your briefing.
