--- a/capabilities/calendar.mdx
+++ b/capabilities/calendar.mdx
@@ -37,7 +37,7 @@ Martin syncs with your existing calendar accounts.
 
 ## Setup
 
-1. Tap the hammer icon in the Martin app and select "Calendar".
+1. Tap the account icon in the Martin app and select "Calendar".
 2. Tap "Add Google Calendar" or "Add Apple Calendar".
 3. If signing in with Google, you will be redirected to Google to sign in.
 4. If signing in with Apple, you will have to generate and enter an [app-specific password](https://support.apple.com/en-us/HT211819).
