--- a/capabilities/contacts.mdx
+++ b/capabilities/contacts.mdx
@@ -27,7 +27,7 @@ Martin syncs with your phone contacts.
 
 ## Setup
 
-1. Tap the hammer icon in the Martin app and select "Contacts".
+1. Tap the account icon in the Martin app and select "Contacts".
 2. Allow Martin to sync with your phone contacts when prompted.
 3. Exit the integrations menu and tap the people icon.
 4. Tap "Make your Martin social" if it is not already completed.
