--- a/capabilities/inbox.mdx
+++ b/capabilities/inbox.mdx
@@ -23,5 +23,5 @@ Martin syncs with your existing inboxes.
 
 ## Setup
 
-1. Tap the hammer icon in the Martin app and select "Inbox".
+1. Tap the account icon in the Martin app and select "Inbox".
 2. Tap "Add Gmail Account" and sign in with your Google account.
