--- a/capabilities/meetings.mdx
+++ b/capabilities/meetings.mdx
@@ -16,6 +16,6 @@ Martin will do some research and create an agenda for the meeting ahead of time.
 
 ## Setup
 
-1. Tap the hammer icon in the Martin app and select "Meetings".
+1. Tap the account icon in the Martin app and select "Meetings".
 2. Optionally turn on daily morning syncs and evening debriefs.
 3. Manage your upcoming meetings with Martin.
