--- a/capabilities/slack.mdx
+++ b/capabilities/slack.mdx
@@ -23,5 +23,5 @@ Martin syncs with your Slack accounts and workspaces.
 
 ## Setup
 
-1. Tap the hammer icon in the Martin app and select "Slack".
+1. Tap the account icon in the Martin app and select "Slack".
 2. Tap "Add Slack Workspace" and sign in with your Slack account.
