--- a/interfaces/email.mdx
+++ b/interfaces/email.mdx
@@ -16,10 +16,9 @@ icon: 'envelope'
 
 ## Setup
 
-1. Tap the hammer icon in the app and select "Email".
+1. Tap the account icon in the app and select "Email".
 2. Tap "Add your email address" and enter your email address.
 3. Verify your email address by entering the code you receive via email.
-4. Add up to 5 email addresses for Martin to recognize.
 
 <Tip>
     Got an email with events coming up? Forward it to Martin, and he'll add them all to your calendar.
