--- a/interfaces/slack.mdx
+++ b/interfaces/slack.mdx
@@ -16,7 +16,7 @@ icon: 'slack'
 
 ## Setup
 
-1. Tap the hammer icon in the app and select "Slack".
+1. Tap the account icon in the app and select "Slack".
 2. Tap "Add Slack Workspace" and sign in with your Slack account.
 
 <Tip>
