--- a/interfaces/sms.mdx
+++ b/interfaces/sms.mdx
@@ -18,7 +18,7 @@ icon: 'messages'
 
 ## Setup
 
-1. Tap the hammer icon in the app and select "SMS".
+1. Tap the account icon in the app and select "SMS".
 2. Tap "Add your phone number" and enter your phone number.
 3. Verify your phone number by entering the code you receive via SMS.
 
