--- a/interfaces/phone.mdx
+++ b/interfaces/phone.mdx
@@ -10,6 +10,6 @@ icon: 'phone'
 
 ## Setup
 
-1. Tap the hammer icon in the app and select "Phone Call".
+1. Tap the account icon in the app and select "Phone Call".
 2. Tap "Add your phone number" and enter your phone number.
 3. Verify your phone number by entering the code you receive via SMS.
