--- a/interfaces/slack.mdx
+++ b/interfaces/slack.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Slack'
-description: 'DM Martin to reach Martin on Slack.'
+description: 'Type /Martin, @Martin, or DM Martin to reach Martin on Slack.'
 icon: 'slack'
 ---
 
@@ -20,5 +20,5 @@ icon: 'slack'
 2. Tap "Add Slack Workspace" and sign in with your Slack account.
 
 <Tip>
-    Separately, Martin can also send and react to messages from your own Slack account on command.
+    Separately, Martin can send and react to messages from your own Slack account on command.
 </Tip>
