Shortcuts and lists updated

--- a/interfaces/slack.mdx
+++ b/interfaces/slack.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Slack'
-description: 'Type /Martin, @Martin, or DM Martin to reach Martin on Slack.'
+description: 'DM Martin on Slack.'
 icon: 'slack'
 ---
 
