--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: Bring on Martin as your new assistant
+description: Onboard Martin as your new personal assistant
 ---
 
 
@@ -8,7 +8,7 @@ description: Bring on Martin as your new assistant
 
 <CardGroup cols={2}>
   <Card
-    title="Sign in on the web"
+    title="Sign in on web"
     icon="key"
     href="https://app.trymartin.com"
   >
