--- a/capabilities/calendar.mdx
+++ b/capabilities/calendar.mdx
@@ -18,14 +18,17 @@ icon: 'calendar'
 
 Martin syncs with your existing calendar accounts.
 
-<Card title="Google Calendar" icon="calendar" horizontal="true">
+<Card title="Google Calendar" icon="google" horizontal="true">
   Connect up to 5 Google Calendars with your Martin account.
 </Card>
 
-<Card title="Apple Calendar" icon="calendar" horizontal="true">
+<Card title="Apple Calendar" icon="apple" horizontal="true">
   Connect up to 5 iCloud Calendars with your Martin account.
 </Card>
 
+<Card title="Outlook Calendar" icon="microsoft" horizontal="true">
+  Connect up to 5 Outlook Calendars with your Martin account.
+</Card>
 
 ## Example Commands
 - "Add every event from this email to my calendar with detailed descriptions."
