--- a/capabilities/inbox.mdx
+++ b/capabilities/inbox.mdx
@@ -8,8 +8,12 @@ icon: 'mailbox'
 
 Martin syncs with your existing inboxes.
 
-<Card title="Gmail" icon="mailbox" horizontal="true">
+<Card title="Gmail" icon="google" horizontal="true">
   Connect up to 5 Gmail accounts with your Martin account.
+</Card>
+
+<Card title="Outlook" icon="microsoft" horizontal="true">
+  Connect up to 5 Outlook accounts with your Martin account.
 </Card>
 
 
