--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,8 +1,18 @@
 ---
-title: Introduction
-description: Onboard Martin as your new personal assistant
+title: How it works
+description: Meet your new personal assistant
 ---
 
+<iframe
+  width="100%"
+  height="400"
+  src="https://www.youtube.com/embed/ymA_te-Q2R8?si=ZjmmOzRkhlN0ZHx7"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerpolicy="strict-origin-when-cross-origin"
+  allowfullscreen
+></iframe>
 
 ## Create an account
 
