--- a/capabilities/briefings.mdx
+++ b/capabilities/briefings.mdx
@@ -13,7 +13,14 @@ icon: 'newspaper'
 - Weather updates
 
 
-## Setup
+## Setup (web)
 
-1. Tap the account icon in the Martin app and select "Briefings".
-2. Select the frequency, topics, and send time of your briefing.
+1. Go to the briefings card in your [Martin dashboard](https://app.trymartin.com).
+2. Click the settings button in the top right.
+3. Select a frequency and list of topics for your briefings.
+
+## Setup (iOS app)
+
+1. Tap the account icon in the [Martin app](https://www.trymartin.com/#section-1).
+2. Under "Tools", select "Briefings".
+3. Select a frequency and list of topics for your briefings.
