--- a/capabilities/calendar.mdx
+++ b/capabilities/calendar.mdx
@@ -38,9 +38,18 @@ Martin syncs with your existing calendar accounts.
 - "Block off Friday from 3pm to 5pm because I'm on a plane."
 
 
-## Setup
+## Setup (web)
 
-1. Tap the account icon in the Martin app and select "Calendar".
-2. Tap "Add Google Calendar" or "Add Apple Calendar".
-3. If signing in with Google, you will be redirected to Google to sign in.
-4. If signing in with Apple, you will have to generate and enter an [app-specific password](https://support.apple.com/en-us/HT211819).
+1. Go to the calendar card in your [Martin dashboard](https://app.trymartin.com).
+2. Click the settings button in the top right.
+3. Click "Connect Google Calendar", "Connect Apple Calendar", or "Connect Outlook Calendar".
+4. If signing in with Google or Outlook, you will be redirected to the respective service to sign in.
+5. If signing in with Apple, you will have to generate and enter an [app-specific password](https://support.apple.com/en-us/HT211819).
+
+## Setup (iOS app)
+
+1. Tap the account icon in the [Martin app](https://trymartin.com/#section-1).
+2. Under "Integrations", select "Calendar".
+3. Click "Add Google Calendar", "Add Apple Calendar", or "Add Outlook Calendar".
+4. If signing in with Google or Outlook, you will be redirected to the respective service to sign in.
+5. If signing in with Apple, you will have to generate and enter an [app-specific password](https://support.apple.com/en-us/HT211819).
