--- a/capabilities/inbox.mdx
+++ b/capabilities/inbox.mdx
@@ -20,12 +20,21 @@ Martin syncs with your existing inboxes.
 ## Example Commands
 - "Check for new emails from dawson@trymartin.com today."
 - "Draft a reply to Dawson's new email saying I can meet tomorrow at 9am."
-- "Star the email about the project plan, and remind me to review it by Friday."
+- "Read me the email about the project plan out loud."
 - "Forward the project plan to ethan@trymartin.com and ask for his input."
 - "Email Eric the Zoom link for the meeting today on my calendar."
 
 
-## Setup
+## Setup (web)
 
-1. Tap the account icon in the Martin app and select "Inbox".
-2. Tap "Add Gmail Account" and sign in with your Google account.
+1. Go to the inbox card in your [Martin dashboard](https://app.trymartin.com).
+2. Click the settings button in the top right.
+3. Click "Connect Gmail" or "Connect Outlook".
+4. You will be redirected to the respective service to sign in.
+
+## Setup (iOS app)
+
+1. Tap the account icon in the [Martin app](https://trymartin.com/#section-1).
+2. Under "Integrations", select "Inbox".
+3. Click "Connect Gmail" or "Connect Outlook".
+4. You will be redirected to the respective service to sign in.
