--- a/capabilities/lists.mdx
+++ b/capabilities/lists.mdx
@@ -12,3 +12,7 @@ icon: 'list-check'
 - "Add 'Saving Private Ryan' to my watchlist."
 - "Add 'Eric' and 'Andrew' to my invite list."
 
+## Managing lists 
+
+- In your [Martin dashboard](https://app.trymartin.com), you can create, view, and manage your lists in the "Lists" card.
+- In the [iOS app](https://trymartin.com/#section-1), tap the account icon and under "Tools", tap "Lists" to manage your lists.
