--- a/capabilities/reminders.mdx
+++ b/capabilities/reminders.mdx
@@ -29,8 +29,14 @@ icon: 'bell'
 </Tabs>
 
 
+## Setup (web)
 
-## Setup
+1. Go to the reminders card in your [Martin dashboard](https://app.trymartin.com).
+2. Click the settings button in the top right.
+3. Select which interfaces you want to use for reminders (App Notifications, SMS, Phone Call, Email, or Slack).
 
-1. Make sure you are allowing notifications from Martin in your app settings.
-2. Each interface (SMS, Phone Call, Email, Slack) needs to be set up for Martin to send reminders through that interface.
+## Setup (iOS app)
+
+1. Tap the account icon in the [Martin app](https://trymartin.com/#section-1).
+2. Under "Tools", select "Reminders".
+3. Select which interfaces you want to use for reminders (App Notifications, SMS, Phone Call, Email, or Slack).
