--- a/capabilities/shortcuts.mdx
+++ b/capabilities/shortcuts.mdx
@@ -14,9 +14,9 @@ Each shortcut has a name and instructions.
 - Name: "Add an idea"
 - Instructions: "Add the following idea to my ideas list, ping #random in Slack, and text it to myself."
 
-## Setup
+## Setup (web only)
 
-1. Go to the shortcuts card in the web app.
+1. Go to the shortcuts card in your [dashboard](https://app.trymartin.com).
 2. Click "Shortcut +".
 3. Enter the name and instructions.
 4. Click "Create Shortcut".
