--- a/interfaces/email.mdx
+++ b/interfaces/email.mdx
@@ -14,11 +14,20 @@ icon: 'envelope'
   allowfullscreen
   ></iframe>
 
-## Setup
+## Setup (web)
 
-1. Tap the account icon in the app and select "Email".
-2. Tap "Add your email address" and enter your email address.
-3. Verify your email address by entering the code you receive via email.
+1. Go to your [Martin dashboard](https://app.trymartin.com).
+2. Click the account icon at the bottom of the side bar.
+3. Click "Add a primary email".
+4. Enter your email address in the email field.
+5. Verify your email address by entering the code you receive via email.
+
+## Setup (iOS app)
+
+1. Tap the account icon in the [Martin app](https://trymartin.com/#section-1).
+2. Under "Contact", tap "Email".
+3. Enter your email address.
+4. Verify your email address by entering the code you receive via email.
 
 <Tip>
     Got an email with events coming up? Forward it to Martin, and he'll add them all to your calendar.
