--- a/interfaces/slack.mdx
+++ b/interfaces/slack.mdx
@@ -14,10 +14,19 @@ icon: 'slack'
   allowfullscreen
   ></iframe>
 
-## Setup
+## Setup (web)
 
-1. Tap the account icon in the app and select "Slack".
-2. Tap "Add Slack Workspace" and sign in with your Slack account.
+1. Go to your [Martin dashboard](https://app.trymartin.com).
+2. Click the integration settings button at the top of the side bar.
+3. Click "Slack".
+4. Click "Connect Workspace".
+5. You will be redirected to Slack to sign in.
+
+## Setup (iOS app)
+
+1. Tap the account icon in the [Martin app](https://trymartin.com/#section-1).
+2. Under "Integrations", select "Slack".
+3. Tap "Add Slack Workspace" and sign in with your Slack account.
 
 <Tip>
     Separately, Martin can send and react to messages from your own Slack account on command.
