--- a/capabilities/contacts.mdx
+++ b/capabilities/contacts.mdx
@@ -16,7 +16,6 @@ Martin syncs with your phone contacts.
   Martin can make phone calls to your contacts and speak with them on your behalf.
 </Card>
 
-
 ## Example Commands
 - "Text John to reschedule our meeting for tomorrow at 3pm instead of 2pm."
 - "Call my mom and wish her a happy birthday on my behalf."
@@ -24,10 +23,8 @@ Martin syncs with your phone contacts.
 - "Text my assistant that I'll be 10 minutes late to the meeting."
 - "Send a text to Alex briefing him on my events from today."
 
+## Syncing your contacts (iOS app only)
 
-## Setup
-
-1. Tap the account icon in the Martin app and select "Contacts".
+1. Tap the account icon in the [Martin app](https://trymartin.com/#section-1) and select "Contacts".
 2. Allow Martin to sync with your phone contacts when prompted.
-3. Exit the integrations menu and tap the people icon.
-4. Tap "Make your Martin social" if it is not already completed.
+3. Now Martin has access to your contacts and can text and call them by name.
