--- a/capabilities/slack.mdx
+++ b/capabilities/slack.mdx
@@ -21,7 +21,16 @@ Martin syncs with your Slack accounts and workspaces.
 - "Pin the message I just sent in #general."
 
 
-## Setup
+## Setup (web)
 
-1. Tap the account icon in the Martin app and select "Slack".
-2. Tap "Add Slack Workspace" and sign in with your Slack account.
+1. Go to your [Martin dashboard](https://app.trymartin.com).
+2. Click the integration settings button at the top of the side bar.
+3. Click "Slack".
+4. Click "Connect Workspace".
+5. You will be redirected to Slack to sign in.
+
+## Setup (iOS app)
+
+1. Tap the account icon in the [Martin app](https://trymartin.com/#section-1).
+2. Under "Integrations", select "Slack".
+3. Tap "Add Slack Workspace" and sign in with your Slack account.
