--- a/interfaces/phone.mdx
+++ b/interfaces/phone.mdx
@@ -8,8 +8,17 @@ icon: 'phone'
     Have no Wifi but need to look something up or check your email? Give Martin a call!
 </Tip>
 
-## Setup
+## Setup (web)
 
-1. Tap the account icon in the app and select "Phone Call".
-2. Tap "Add your phone number" and enter your phone number.
-3. Verify your phone number by entering the code you receive via SMS.
+1. Go to your [Martin dashboard](https://app.trymartin.com).
+2. Click the account icon at the bottom of the side bar.
+3. Click "Add a phone number".
+4. Enter your phone number.
+5. Verify your phone number by entering the code you receive via SMS.
+
+## Setup (iOS app)
+
+1. Tap the account icon in the [Martin app](https://trymartin.com/#section-1).
+2. Under "Contact", tap "Phone Number".
+3. Enter your phone number.
+4. Verify your phone number by entering the code you receive via SMS.
