--- a/interfaces/sms.mdx
+++ b/interfaces/sms.mdx
@@ -4,8 +4,6 @@ description: 'Text Martin over SMS'
 icon: 'messages'
 ---
 
-
-
 <iframe
   width="100%"
   height="400"
@@ -16,11 +14,20 @@ icon: 'messages'
   allowfullscreen
   ></iframe>
 
-## Setup
+## Setup (web)
 
-1. Tap the account icon in the app and select "SMS".
-2. Tap "Add your phone number" and enter your phone number.
-3. Verify your phone number by entering the code you receive via SMS.
+1. Go to your [Martin dashboard](https://app.trymartin.com).
+2. Click the account icon at the bottom of the side bar.
+3. Click "Add a phone number".
+4. Enter your phone number.
+5. Verify your phone number by entering the code you receive via SMS.
+
+## Setup (iOS app)
+
+1. Tap the account icon in the [Martin app](https://trymartin.com/#section-1).
+2. Under "Contact", tap "Phone Number".
+3. Enter your phone number.
+4. Verify your phone number by entering the code you receive via SMS.
 
 <Tip>
     To text Martin on a Mac, turn on Text Message Forwarding in your iPhone's Settings > Messages.
