--- a/capabilities/inbox.mdx
+++ b/capabilities/inbox.mdx
@@ -4,6 +4,16 @@ description: 'Have Martin read, draft, and reply to emails in your inbox.'
 icon: 'mailbox'
 ---
 
+<iframe
+  width="100%"
+  height="400"
+  src="https://www.youtube.com/embed/hqb1-gJOWeI?si=MyE-ZPKqm33_3WfI"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen="true"
+  ></iframe>
+
 ## Integrations
 
 Martin syncs with your existing inboxes.
