--- a/capabilities/reminders.mdx
+++ b/capabilities/reminders.mdx
@@ -4,6 +4,16 @@ description: 'Tell Martin to remind you to do something, and he will ping you wh
 icon: 'bell'
 ---
 
+<iframe
+  width="100%"
+  height="400"
+  src="https://www.youtube.com/embed/kxXEA0wBdYs?si=P9r0fLrY4WR_ss_1"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen="true"
+  ></iframe>
+
 ## Example Commands
 <Tabs>
   <Tab title="SMS Reminders">
