--- a/capabilities/slack.mdx
+++ b/capabilities/slack.mdx
@@ -4,6 +4,16 @@ description: 'Have Martin read and send messages in Slack from your account.'
 icon: 'slack'
 ---
 
+<iframe
+  width="100%"
+  height="400"
+  src="https://www.youtube.com/embed/cG_yroW09J4?si=SKV3VmOMtF5IIbT6"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen="true"
+  ></iframe>
+
 ## Integrations
 
 Martin syncs with your Slack accounts and workspaces.
