--- a/capabilities/briefings.mdx
+++ b/capabilities/briefings.mdx
@@ -4,6 +4,16 @@ description: 'Martin can send you daily or weekly briefings via email.'
 icon: 'newspaper'
 ---
 
+<iframe
+  width="100%"
+  height="400"
+  src="https://www.youtube.com/embed/TQJt-K-YbbU?si=-GSMzcfHGHmCM6Un"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen="true"
+  ></iframe>
+
 ## Example Briefing Topics
 
 - My schedule for today
