--- a/capabilities/calendar.mdx
+++ b/capabilities/calendar.mdx
@@ -7,11 +7,11 @@ icon: 'calendar'
 <iframe
   width="100%"
   height="400"
-  src="https://www.youtube.com/embed/q_MkZjHb4IM?si=4dttCq-60I52rXMR"
+  src="https://www.youtube.com/embed/4nHCB3NaqVQ?si=czWb3QE7_RjasG64"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
+  allowfullscreen="true"
   ></iframe>
 
 ## Integrations
