--- a/interfaces/email.mdx
+++ b/interfaces/email.mdx
@@ -11,7 +11,7 @@ icon: 'envelope'
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
+  allowfullscreen="true"
   ></iframe>
 
 ## Setup (web)
