--- a/introduction.mdx
+++ b/introduction.mdx
@@ -11,7 +11,7 @@ description: Meet your new personal assistant
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerpolicy="strict-origin-when-cross-origin"
-  allowfullscreen
+  allowfullscreen="true"
 ></iframe>
 
 ## Create an account
