--- a/capabilities/lists.mdx
+++ b/capabilities/lists.mdx
@@ -4,6 +4,10 @@ description: 'Have Martin manage lists for you, including to-dos, shopping lists
 icon: 'list-check'
 ---
 
+## Background Tasks
+
+In your To-dos Settings in the [Martin web app](https://app.trymartin.com), you can configure Martin to text you a list of your to-dos every morning. This feature is currently only available to Pro users.
+
 ## Example Commands
 
 - "Add each of my starred emails from today to my customer list."
@@ -12,7 +16,10 @@ icon: 'list-check'
 - "Add 'Saving Private Ryan' to my watchlist."
 - "Add 'Eric' and 'Andrew' to my invite list."
 
-## Managing lists 
+## Setup (web)
 
 - In your [Martin dashboard](https://app.trymartin.com), you can create, view, and manage your lists in the "Lists" card.
+
+## Setup (iOS app)
+
 - In the [iOS app](https://trymartin.com/#section-1), tap the account icon and under "Tools", tap "Lists" to manage your lists.
