--- a/integrations/calendar.mdx
+++ b/integrations/calendar.mdx
@@ -30,6 +30,10 @@ Martin syncs with your existing calendar accounts.
   Connect up to 5 Outlook Calendars with your Martin account.
 </Card>
 
+## Background Tasks
+
+In your calendar Settings in the [Martin web app](https://app.trymartin.com), you can configure Martin to call you every morning and brief you on your schedule for the day. This feature is currently only available to Pro users.
+
 ## Example Commands
 - "Add every event from this email to my calendar with detailed descriptions."
 - "Add the list of events on this PDF to my calendar including locations."
