--- a/integrations/inbox.mdx
+++ b/integrations/inbox.mdx
@@ -27,6 +27,11 @@ Martin syncs with your existing inboxes.
 </Card>
 
 
+## Background Tasks
+
+In your inbox Settings in the [Martin web app](https://app.trymartin.com), you can configure Martin to send you a daily digest of your emails. This feature is currently only available to Pro users.
+
+
 ## Example Commands
 - "Check for new emails from dawson@trymartin.com today."
 - "Draft a reply to Dawson's new email saying I can meet tomorrow at 9am."
