--- a/interfaces/phone.mdx
+++ b/interfaces/phone.mdx
@@ -8,6 +8,27 @@ icon: 'phone'
     Have no Wifi but need to look something up or check your email? Give Martin a call!
 </Tip>
 
+## Languages
+
+Martin can speak the following 13 languages:
+
+- English
+- French
+- German
+- Spanish
+- Portuguese
+- Chinese
+- Japanese
+- Hindi
+- Italian
+- Dutch
+- Polish
+- Russian
+- Swedish
+- Turkish
+
+To set Martin's language, go to the [Martin Dashboard](https://app.trymartin.com) > Settings > Call Martin > Language. At the moment, you can only set one language for Martin to use at a time.
+
 ## Setup (web)
 
 1. Go to your [Martin dashboard](https://app.trymartin.com).
