--- a/capabilities/roadmap.mdx
+++ b/capabilities/roadmap.mdx
@@ -17,7 +17,7 @@ icon: 'map'
 
 ### 2-3 months
 
-- Apple Reminders, Todoist, and Google Tasks
+- Apple Reminders, Google Tasks
 - Google Drive, One Drive
 - Google Docs, Microsoft Word
 
