--- a/capabilities/todos.mdx
+++ b/capabilities/todos.mdx
@@ -19,6 +19,7 @@ In your To-dos Settings in the [Martin web app](https://app.trymartin.com), you 
 ## Setup (web)
 
 - In your [Martin dashboard](https://app.trymartin.com), you can create, view, and manage your to-dos in the "To-dos" card.
+- You can also import your to-dos from Todoist in the [Martin web app](https://app.trymartin.com) -> Settings -> To-dos.
 
 ## Setup (iOS app)
 
