--- a/capabilities/roadmap.mdx
+++ b/capabilities/roadmap.mdx
@@ -4,45 +4,6 @@ description: 'Here are some features we are working on.'
 icon: 'map'
 ---
 
-## Background Tasks
+View our public roadmap [here](https://martinai.canny.io/). You can submit feature requests and vote on existing ones.
 
-### 1-2 months
-
-- Email autolabeling (work, personal, etc.)
-- Email triggered actions ('text me when John replies' or 'add a to-do when a customer emails me')
-- Pre-meeting briefings (profile of meeting participants, agenda, etc. sent via text or email)
-- Auto-prioritization of to-dos (automatically schedule to-dos on calendar based on priority and due date)
-
-## Integrations
-
-### 2-3 months
-
-- Apple Reminders, Google Tasks
-- Google Drive, One Drive
-- Google Docs, Microsoft Word
-
-### 3+ months
-
-- Notion
-- ClickUp
-- SMTP/IMAP email
-- Asana
-- Jira
-- Motion
-- Twitter, LinkedIn, and Facebook
-- Zapier
-- API/Webhooks
-
-## Interfaces
-
-### 2-3 months
-
-- Android app
-
-### 3+ months
-
-- Chrome extension
-- MacOS app
-
-
-You can request a feature by [contacting our founders](https://trymartin.com/help).
+Join our [Discord](https://discord.com/invite/a7uQjrhCJR) to stay up to date with product updates and engage with the community.
